// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not display the remove member action 1`] = `
<ActionsDropdown>
  <ActionsDropdownItem
    onClick={[Function]}
  >
    organization.members.manage_groups
  </ActionsDropdownItem>
</ActionsDropdown>
`;

exports[`should not render actions and groups for non admin 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash=""
      name="Admin Istrator"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      Admin Istrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </td>
</tr>
`;

exports[`should render actions and groups for admin 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash=""
      name="Admin Istrator"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      Admin Istrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </td>
  <td
    className="text-right text-middle"
  >
    organization.members.x_groups.3
  </td>
  <td
    className="nowrap text-middle text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        organization.members.manage_groups
      </ActionsDropdownItem>
      <ActionsDropdownDivider />
      <ActionsDropdownItem
        destructive={true}
        onClick={[Function]}
      >
        organization.members.remove
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should show groups at 0 if the groupCount field is not defined (just added user) 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash="7daf6c79d4802916d83f6266e24850af"
      name="John Doe"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      John Doe
    </strong>
    <span
      className="note little-spacer-left"
    >
      john
    </span>
  </td>
  <td
    className="text-right text-middle"
  >
    organization.members.x_groups.0
  </td>
  <td
    className="nowrap text-middle text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        organization.members.manage_groups
      </ActionsDropdownItem>
      <ActionsDropdownDivider />
      <ActionsDropdownItem
        destructive={true}
        onClick={[Function]}
      >
        organization.members.remove
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
